--- a/edit/fedinterop/extensibility.adoc
+++ b/edit/fedinterop/extensibility.adoc
@@ -1,5 +1,5 @@
 === Extensibility
 
-Support for SAML extensibility is of paramount importance since it allows deployments to evolve and meet future needs. The SAML standard has explicit support for extensibility in metadata, protocol messages, and assertions. Most extension points in SAML have optional semantics, which means that ignoring extension content is a valid and acceptable practice. 
+Support for SAML extensibility is of paramount importance since it allows deployments to evolve and meet future needs. The SAML standard has explicit support for extensibility in metadata, protocol messages, and assertions. Most extension points in SAML have optional semantics, which means that ignoring extension content is a valid and acceptable practice.
 
-[IIP-EXT01]:: Implementations MUST successfully consume any and all well-formed extensions. Unless otherwise noted in this profile, the content of `<saml2p:Extensions>`, `<md:Extensions>`, and `<saml2:Advice>` elements MAY be ignored but MUST NOT result in software failures. Additionally, any element established in <<SAML2MD-xsd>> or <<SAML2-xsd>> with a type definition containing an **<xsd:anyAttribute>** subelement may include undefined attribute content.  This content MAY likewise be ignored but MUST NOT result in software failures.
+[[IIP-EXT01]] [IIP-EXT01]:: Implementations MUST successfully consume any and all well-formed extensions. Unless otherwise noted in this profile, the content of `<saml2p:Extensions>`, `<md:Extensions>`, and `<saml2:Advice>` elements MAY be ignored but MUST NOT result in software failures. Additionally, any element established in <<SAML2MD-xsd>> or <<SAML2-xsd>> with a type definition containing an **<xsd:anyAttribute>** subelement may include undefined attribute content.  This content MAY likewise be ignored but MUST NOT result in software failures.
