--- a/edit/fedinterop/egov-profile-diff.adoc
+++ b/edit/fedinterop/egov-profile-diff.adoc
@@ -4,20 +4,17 @@ This section summarizes the differences between the two profiles.
 
 The profiles will be abbreviated "Interop" and "eGov" respectively.
 
-=== Structure and General Approach
-- The Interop Profile introduces a new layer in its outline for requirements that are
-related to IDPs, SPs or are common.
-- The conformance classes have been dropped in favor of a single set of requirements.
+== General Changes in the Interop Profile
+- The name reflects the fact that SAML WebSSO Federation as described in the eGov profile is in fact applicable to any sector, not only to public sector.
+- The profile specifies the minimal requirements for implementers of SAML software that that promote interoperability by default.
+- Requirements have been reworded in the Interop profile for better precision and to reflect lessons learned.
 - Requirements have been selected to be testable and related to the implementation perspective.
 
-=== Requirement Mapping
-The June 2010 version 2.0 of the eGov profile was reformatted in a more formal way
-with requirement identifiers for better reference, and is published as version 2.0bis.
-The following mapping table is using these identifiers.
-Requirements have been reworded in the Interop profile for better precision and to
-reflect lessons learned. This section is not going into the fine details, but tries
-to give a guide to the changes in general. Only MUST and SHOULD requirements
-have not been included.
+=== Approach to Mapping the Profiles
+- The Interop Profile introduces a new layer in its outline for requirements that are related to IDPs, SPs or are common to both. The mapping table follows the eGov strucuture.
+- The conformance classes have been dropped in favor of a single set of requirements.
+- The June 2010 version 2.0 of the eGov profile was reformatted in a more formal way with requirement identifiers for better reference, and is published as version 2.0bis. The following mapping table is using these identifiers.
+- This section is not going into the fine details, but tries to give a guide to the changes in general. Only MUST and SHOULD requirements have not been included.
 
 .eGov to Interop Profile Mapping
 [width="100%", cols="3,3,30a", options="header"]
