--- a/edit/fedinterop/references.adoc
+++ b/edit/fedinterop/references.adoc
@@ -28,4 +28,4 @@
 - [[[XMLSig]]] D. Eastlake et al. XML-Signature Syntax and Processing, Second Edition. World Wide Web Consortium Recommendation, June 2008. http://www.w3.org/TR/xmldsig-core/
 - [[[BetterCrypto]]] BetterCrypto.org, Applied Crypto Hardening. https://bettercrypto.org
 - [[[RFC7457]]] IETF RFC 7457, Summarizing Known Attacks on Transport Layer Security (TLS) and Datagram TLS (DTLS), February 2015. https://www.ietf.org/rfc/rfc7457.txt
-- [[[SAML-EC]]] Internet-Draft (kitten WG), SAML Enhanced Client SASL and GSS-API Mechanisms, October 10, 2015. https://datatracker.ietf.org/doc/draft-ietf-kitten-sasl-saml-ec/
+- [[[SAML-EC]]] IETF Internet-Draft, SAML Enhanced Client SASL and GSS-API Mechanisms, October 10, 2015. https://datatracker.ietf.org/doc/draft-ietf-kitten-sasl-saml-ec/
