fixed reference format

--- a/edit/fedinterop/idp.adoc
+++ b/edit/fedinterop/idp.adoc
@@ -40,7 +40,7 @@ _Note that ForceAuthn is most commonly used for privilege escalation or to initi
 
 [[IIP-IDP14]] [IIP-IDP14]:: Identity Providers MUST support the use of HTTP Basic Authentication [RFC2617] to authenticate the user agent. Other forms of authentication MAY be supported.
 
-[[IIP-IDP15]] [IIP-IDP15]:: Identity Providers MUST support the generation and inclusion of a random key in accordance with [SAML-EC], Section 5.3.1.
+[[IIP-IDP15]] [IIP-IDP15]:: Identity Providers MUST support the generation and inclusion of a random key in accordance with <<SAML-EC>>, Section 5.3.1.
 
 [[IIP-IDP16]] [IIP-IDP16]:: Identity Providers MUST support the consumption of peer configuration values from SAML metadata, without additional inputs or separate configuration, for any element listed in the "Use of Metadata" section in <<SAML2ECP>> (section 2.3.10).
 
